--- a/src/main/resources/application-default.yml
+++ b/src/main/resources/application-default.yml
@@ -61,6 +61,8 @@ spring:
     mongodb:
       uri: mongodb://localhost:27018
       database: neotropical-otter
+springdoc:
+  show-actuator: false
 
 app:
   client:
