--- a/src/main/resources/application-default.yml
+++ b/src/main/resources/application-default.yml
@@ -70,3 +70,19 @@ app:
   client:
     billing:
       use-dummy: true
+  products:
+    -
+      host: localhost
+      timeout: 4000
+      logging: true
+      use-dummy: true
+      product-code: MOCK_UP
+      topics:
+        -
+          id: MOCK-6rUge4jHAWAzI8tQAoo
+          landing-way: WEB_VIEW
+          landing:
+            active-detail: /using/booking/{bookingId}
+            record-detail: /end/booking/{bookingId}
+
+
