--- a/src/main/resources/application-default.yml
+++ b/src/main/resources/application-default.yml
@@ -70,6 +70,8 @@ app:
   client:
     billing:
       use-dummy: true
+    voucher:
+      use-dummy: true
   products:
     -
       host: localhost
