--- a/src/main/resources/application-default.yml
+++ b/src/main/resources/application-default.yml
@@ -53,8 +53,7 @@ spring:
 
   redis:
     cluster:
-      nodes: localhost:6381
-    password: local
+      nodes: 127.0.0.1:8000,127.0.0.1:8001,127.0.0.1:8002
 
   data:
     mongodb:
